fixed toolbar overlaping issue in Funny theme

--- a/styles/themes/Funny/styles.less
+++ b/styles/themes/Funny/styles.less
@@ -129,7 +129,6 @@
 	background: #f7f0ea;
 	border: 1px solid #ebe3d6;
 	border-radius: 4px 4px 0 0;
-	white-space: nowrap;
 
 	.resizer {
 		height: @theme-toolbar-height;
